// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceChart handleUseEffect should render Chart 1`] = `
<div>
  <Bar
    data={false}
    height={50}
    options={
      Object {
        "legend": Object {
          "display": false,
        },
        "legendCallback": [Function],
        "maintainAspectRatio": false,
        "scales": Object {
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Cost ( £ )",
              },
            },
          ],
        },
      }
    }
    width={50}
  />
</div>
`;

exports[`ServiceChart handleUseEffect should render Loader 1`] = `
<div>
  <Bar
    data={true}
    height={50}
    options={
      Object {
        "legend": Object {
          "display": false,
        },
        "legendCallback": [Function],
        "maintainAspectRatio": false,
        "scales": Object {
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Cost ( £ )",
              },
            },
          ],
        },
      }
    }
    width={50}
  />
</div>
`;

exports[`ServiceChart renderChartLegend should match snapshot 1`] = `
<div>
  <ChartLegend
    chartInstance={Object {}}
    chartLegendItems={
      Array [
        Object {
          "datasetIndex": 0,
          "fillStyle": "rgba(255,99,132,0.2)",
          "hidden": false,
          "lineWidth": 1,
          "strokeStyle": "rgba(255,99,132,1)",
          "text": "API Calls",
        },
      ]
    }
  />
</div>
`;

exports[`ServiceChart should match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ServiceChart>
    <Section
      hasMargin={false}
    >
      <section
        className="section has-padding has-background"
        data-test=""
      >
        <H5>
          <h5
            className="title is-5"
            id=""
          >
            Services
          </h5>
        </H5>
        <Grid>
          <div
            className="columns"
            data-test=""
          >
            <GridItem
              className="is-7 is-offset-5"
            >
              <div
                className="column is-7 is-offset-5"
                data-test=""
              >
                <Grid
                  isMobile={true}
                  isMultiLine={true}
                >
                  <div
                    className="columns is-multiline is-mobile"
                    data-test=""
                  >
                    <FadeIn>
                      <div
                        className="f1ohzb3j-fade-in"
                      />
                    </FadeIn>
                  </div>
                </Grid>
              </div>
            </GridItem>
          </div>
        </Grid>
        <div
          className="c1io3pw8-chart-container"
        >
          <Bar
            data={
              Object {
                "datasets": Array [
                  Object {
                    "backgroundColor": "rgba(255,99,132,0.2)",
                    "borderColor": "rgba(255,99,132,1)",
                    "borderWidth": 1,
                    "data": Array [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0.3,
                      0.594,
                    ],
                    "hoverBackgroundColor": "rgba(255,99,132,0.4)",
                    "hoverBorderColor": "rgba(255,99,132,1)",
                    "label": "API Calls",
                    "totalCost": 0.8939999999999999,
                  },
                ],
                "labels": Array [
                  "November 2019",
                  "December 2019",
                  "January 2020",
                  "February 2020",
                  "March 2020",
                  "April 2020",
                  "May 2020",
                ],
              }
            }
            height={50}
            options={
              Object {
                "legend": Object {
                  "display": false,
                },
                "legendCallback": [Function],
                "maintainAspectRatio": false,
                "scales": Object {
                  "yAxes": Array [
                    Object {
                      "scaleLabel": Object {
                        "display": true,
                        "labelString": "Total Cost ( £ )",
                      },
                    },
                  ],
                },
              }
            }
            width={50}
          />
        </div>
      </section>
    </Section>
  </ServiceChart>
</Provider>
`;
